@@ -42,11 +42,30 @@ public class SalaryServiceImpl implements SalaryService {
     public List<SalaryDTO> getSalariesByMonth(int month, int year) {
         LocalDate firstDay = LocalDate.of(year, month, 1);
         List<Salary> salaries = salaryRepository.findBySalaryMonth(firstDay);
-
+        List<Benefit> allBenefits = benefitService.getAllActive();
         return salaries.stream()
-                .map(SalaryMapper::mapToSalaryDTO)
+                .map(salary -> {
+                    SalaryDTO dto = SalaryMapper.mapToSalaryDTO(salary);
+
+                    List<SalaryBenefitDTO> fullBenefits = allBenefits.stream()
+                            .map(benefit -> dto.getAppliedBenefits().stream()
+                                    .filter(applied -> applied.getTitle().equals(benefit.getTitle()))
+                                    .findFirst()
+                                    .orElse(
+                                            SalaryBenefitDTO.builder()
+                                                    .title(benefit.getTitle())
+                                                    .type(benefit.getBenefitType())
+                                                    .amount(BigDecimal.ZERO)
+                                                    .build()
+                                    ))
+                            .toList();
+
+                    dto.setAppliedBenefits(fullBenefits);
+                    return dto;
+                })
                 .collect(Collectors.toList());
     }
+
 
     @Override
     public List<SalaryDTO> getEmpSalariesByMonth(Long employeeId, int month, int year) {
@@ -96,17 +115,15 @@ public class SalaryServiceImpl implements SalaryService {
 
 
             BigDecimal hourlyRate = employee.getBasicSalary()
-                    .divide(BigDecimal.valueOf(26 * 8), 2, RoundingMode.HALF_UP);
+                    .divide(BigDecimal.valueOf(26 * 8), 10, RoundingMode.HALF_UP);
 
+            BigDecimal productionSalary = hourlyRate.multiply(BigDecimal.valueOf(totalDayHours))
+                    .setScale(0, RoundingMode.CEILING);
 
-            BigDecimal productionSalary = hourlyRate.multiply(BigDecimal.valueOf(totalDayHours));
+            BigDecimal overtimeSalary = hourlyRate.multiply(BigDecimal.valueOf(otHours*2 + weekendHours * 2 + holidayHours * 3))
+                    .setScale(0, RoundingMode.CEILING);
 
-
-            BigDecimal overtimeSalary = hourlyRate.multiply(
-                    BigDecimal.valueOf(otHours*2 + weekendHours * 2 + holidayHours * 3)
-            );
-
-            List<SalaryBenefit> benefitItems = generateSalaryBenefits(employee, null); // chưa gán Salary
+            List<SalaryBenefit> benefitItems = generateSalaryBenefits(employee, null);
 
             BigDecimal totalAllowance = benefitItems.stream()
                     .filter(b -> b.getBenefitType() == BenefitType.PHU_CAP)
@@ -135,7 +152,6 @@ public class SalaryServiceImpl implements SalaryService {
                     .salaryMonth(salaryMonth)
                     .build();
 
-// Gán lại salary cho các benefit (nếu ban đầu truyền null)
             for (SalaryBenefit b : benefitItems) {
                 b.setSalary(salary);
             }
@@ -198,26 +214,49 @@ public class SalaryServiceImpl implements SalaryService {
         salaryRepository.saveAll(salaries);
     }
     @Override
-    public Page<SalaryDTO> getSalariesByMonth(int month, int year, int page, int size, String search) {
+    public Page<SalaryDTO> getSalariesByMonth(int month, int year, int page, int size, String search, Long departmentId, Long positionId, Long lineId) {
         LocalDate firstDay = LocalDate.of(year, month, 1);
         Pageable pageable = PageRequest.of(page, size);
 
-        List<Salary> all = salaryRepository.findBySalaryMonth(firstDay);
+        // Lấy tất cả các lương trong tháng
+        List<Salary> allSalaries = salaryRepository.findBySalaryMonth(firstDay);
 
         // Lọc theo mã hoặc tên nhân viên nếu có search
         if (search != null && !search.trim().isEmpty()) {
             String lower = search.trim().toLowerCase();
-            all = all.stream()
+            allSalaries = allSalaries.stream()
                     .filter(s -> s.getEmployee().getEmployeeCode().toLowerCase().contains(lower)
                             || s.getEmployee().getEmployeeName().toLowerCase().contains(lower))
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
-        // ✅ LẤY TOÀN BỘ BENEFIT ACTIVE
+        // Lọc theo departmentId, positionId, lineId
+        if (departmentId != null) {
+            allSalaries = allSalaries.stream()
+                    .filter(s -> s.getEmployee().getDepartment() != null &&
+                            s.getEmployee().getDepartment().getDepartmentId().equals(departmentId))
+                    .collect(Collectors.toList());
+        }
+
+        if (positionId != null) {
+            allSalaries = allSalaries.stream()
+                    .filter(s -> s.getEmployee().getPosition() != null &&
+                            s.getEmployee().getPosition().getPositionId().equals(positionId))
+                    .collect(Collectors.toList());
+        }
+
+        if (lineId != null) {
+            allSalaries = allSalaries.stream()
+                    .filter(s -> s.getEmployee().getLine() != null &&
+                            s.getEmployee().getLine().getLineId().equals(lineId))
+                    .collect(Collectors.toList());
+        }
+
+        // Lấy danh sách các benefit đang hoạt động
         List<Benefit> allBenefits = benefitService.getAllActive();
 
-        // ✅ MAP SANG DTO VÀ BỔ SUNG BENEFIT
-        List<SalaryDTO> allDTOs = all.stream()
+        // Map các đối tượng Salary thành SalaryDTO và áp dụng full benefits
+        List<SalaryDTO> salaryDTOs = allSalaries.stream()
                 .map(salary -> {
                     SalaryDTO dto = SalaryMapper.mapToSalaryDTO(salary);
 
@@ -232,25 +271,32 @@ public class SalaryServiceImpl implements SalaryService {
                                                     .amount(BigDecimal.ZERO)
                                                     .build()
                                     ))
-                            .toList();
+                            .collect(Collectors.toList());
 
                     dto.setAppliedBenefits(fullBenefits);
                     return dto;
                 })
-                .toList();
+                .collect(Collectors.toList());
 
+        // Tính phân trang
         int start = (int) pageable.getOffset();
-        int end = Math.min((start + pageable.getPageSize()), allDTOs.size());
+        int end = Math.min((start + pageable.getPageSize()), salaryDTOs.size());
 
-        List<SalaryDTO> pagedContent = start >= allDTOs.size() ? List.of() : allDTOs.subList(start, end);
-        return new PageImpl<>(pagedContent, pageable, allDTOs.size());
+        List<SalaryDTO> pagedContent = start >= salaryDTOs.size() ? List.of() : salaryDTOs.subList(start, end);
+        return new PageImpl<>(pagedContent, pageable, salaryDTOs.size());
     }
+
 
     private BigDecimal calculateAmount(BigDecimal basic, BigDecimal value, FormulaType type) {
         if (value == null || type == null) return BigDecimal.ZERO;
         return switch (type) {
             case AMOUNT -> value;
-            case PERCENTAGE -> basic.multiply(value).divide(BigDecimal.valueOf(100), 2, RoundingMode.HALF_UP);
+            case PERCENTAGE -> {
+                BigDecimal result = basic.multiply(value)
+                        .divide(BigDecimal.valueOf(100), 10, RoundingMode.HALF_UP);
+                yield result.setScale(0, RoundingMode.CEILING);
+            }
+
         };
     }
     private List<SalaryBenefit> generateSalaryBenefits(Employee employee, Salary salary) {
